# shoutit

./: README.md
client-android/OneSignalShoutIt/: build.gradle
client-android/OneSignalShoutIt/app/: build.gradle  google-services.json
client-android/OneSignalShoutIt/app/src/androidTest/java/com/cogciprocate/onesignalshoutit/: ExampleInstrumentedTest.java
client-android/OneSignalShoutIt/app/src/main/: AndroidManifest.xml
client-android/OneSignalShoutIt/app/src/main/java/: LogAdapter.java
client-android/OneSignalShoutIt/app/src/main/java/com/cogciprocate/onesignalshoutit/: ApplicationClass.java  BroadcastActivity.java  MainActivity.java
client-android/OneSignalShoutIt/app/src/main/res/layout/: activity_broadcast.xml  activity_main.xml
client-android/OneSignalShoutIt/app/src/main/res/values/: strings.xml
client-android/OneSignalShoutIt/app/src/test/java/com/cogciprocate/onesignalshoutit/: ExampleUnitTest.java
client-android/OneSignalShoutIt/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml
server/src/: main.rs
